# tadpole-studio

./: .gitignore  ATTRIBUTION.md  LICENSE  README.md  start.py
backend/: pyproject.toml
backend/src/tadpole_studio/: ace_handler.py  config.py  main.py
backend/src/tadpole_studio/backends/: __init__.py  ace_step_backend.py  base.py  heartmula_backend.py
backend/src/tadpole_studio/db/: connection.py  schema.py
backend/src/tadpole_studio/models/: common.py  dj.py  generation.py  radio.py  training.py
backend/src/tadpole_studio/routers/: dj.py  generation.py  health.py  history.py  lora.py  models.py  playlists.py  radio.py  songs.py  themes.py  training.py  uploads.py
backend/src/tadpole_studio/services/: dj_service.py  generation.py  gpu_lock.py  llm_provider.py  lora_service.py  radio_service.py  title_generator.py  training_service.py
backend/src/tadpole_studio/ws/: manager.py
backend/tests/: conftest.py  test_generation.py  test_health.py  test_phase9.py  test_songs.py  test_validation.py
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/public/: radio-worklet-processor.js
frontend/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx
frontend/src/hooks/: use-active-backend.ts  use-active-model.ts  use-dj.ts  use-generation-ws.ts  use-generation.ts  use-keyboard-shortcuts.ts  use-media-session.ts  use-radio-playback.ts  use-radio.ts  use-training-ws.ts  use-wavesurfer.ts
frontend/src/lib/: animations.ts  constants.ts  export-utils.ts  utils.ts
frontend/src/stores/: ambient-store.ts  dj-store.ts  engine-switch-store.ts  (+7 more)
(+138 files in other folders)
